[#472] Fix margins on mobile (#621)

--- a/src/views/Welcome.scss
+++ b/src/views/Welcome.scss
@@ -3,7 +3,7 @@
 .Welcome {
   h1 {
     font-size: 2.25em;
-    margin: 2.25em $padding 0;
+    margin: 2.25rem $padding 0;
   }
 
   &__details {
